Regression and Classification Module 2

--- a/module2-regression-2/Unit_2_Sprint_1_Module_2_LESSON.ipynb
+++ b/module2-regression-2/Unit_2_Sprint_1_Module_2_LESSON.ipynb
@@ -134,13 +134,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 576
-    },
+    "colab": {},
     "colab_type": "code",
-    "id": "VRh-FSMTrzoG",
-    "outputId": "d3044fb2-4d26-4296-a8ad-f17c126d7650"
+    "id": "VRh-FSMTrzoG"
    },
    "outputs": [],
    "source": [
@@ -238,7 +234,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "colab_type": "text",
+    "id": "uNRlLSKESLZI"
+   },
    "source": [
     "**How should we split: Randomly? Before/after a given date?**\n",
     "\n",
@@ -288,13 +287,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
+    "colab": {},
     "colab_type": "code",
-    "id": "IwsFNRRl5ago",
-    "outputId": "542f2884-d952-4e54-e6ff-f2268da01336"
+    "id": "IwsFNRRl5ago"
    },
    "outputs": [],
    "source": []
@@ -387,13 +382,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
+    "colab": {},
     "colab_type": "code",
-    "id": "mjm2CBV1ty35",
-    "outputId": "4d074079-62c0-447b-c197-d3aa5990c963"
+    "id": "mjm2CBV1ty35"
    },
    "outputs": [],
    "source": [
@@ -413,7 +404,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "mxLztr4ySLZb"
+   },
    "outputs": [],
    "source": [
     "# Arrange y target vectors\n",
@@ -425,7 +420,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "XYNFtEh0SLZd"
+   },
    "outputs": [],
    "source": [
     "# Get mean baseline\n",
@@ -436,7 +435,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "KMS2gH3USLZg"
+   },
    "outputs": [],
    "source": [
     "# Train Error\n",
@@ -450,13 +453,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 68
-    },
+    "colab": {},
     "colab_type": "code",
-    "id": "3ma2uzUD5agv",
-    "outputId": "e29c30e3-e06c-4a9b-8d15-07855519c066"
+    "id": "3ma2uzUD5agv"
    },
    "outputs": [],
    "source": [
@@ -492,13 +491,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 617
-    },
+    "colab": {},
     "colab_type": "code",
-    "id": "88JNPm46rzoD",
-    "outputId": "d60676a1-56bc-46e9-b996-42eb0b163050"
+    "id": "88JNPm46rzoD"
    },
    "outputs": [],
    "source": [
@@ -540,7 +535,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "ooTK5UEESLZq"
+   },
    "outputs": [],
    "source": [
     "# 1. Import the appropriate estimator class from Scikit-Learn\n",
@@ -550,7 +549,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "RqIau3EQSLZt"
+   },
    "outputs": [],
    "source": [
     "# 2. Instantiate this class\n",
@@ -560,7 +563,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "ZYLjRFOdSLZw"
+   },
    "outputs": [],
    "source": [
     "# 3. Arrange X features matrices (already did y target vectors)\n",
@@ -573,7 +580,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "kqGqr7mTSLZy"
+   },
    "outputs": [],
    "source": [
     "# 4. Fit the model\n",
@@ -587,13 +598,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 68
-    },
+    "colab": {},
     "colab_type": "code",
-    "id": "1AD_jJHm5ag2",
-    "outputId": "95a8c939-1b0a-4353-b770-c99a2e7fab5a"
+    "id": "1AD_jJHm5ag2"
    },
    "outputs": [],
    "source": [
@@ -641,13 +648,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 617
-    },
+    "colab": {},
     "colab_type": "code",
-    "id": "XWNNK5r-t_pF",
-    "outputId": "7a71248d-7a7e-4212-eeff-e6e8901a3e4c"
+    "id": "XWNNK5r-t_pF"
    },
    "outputs": [],
    "source": [
@@ -674,7 +677,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "GKINGAqzSLZ8"
+   },
    "outputs": [],
    "source": [
     "# TODO: Complete this cell\n",
@@ -689,7 +696,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "F5iRiZfDSLaA"
+   },
    "outputs": [],
    "source": [
     "# TODO: Fit the model\n",
@@ -700,13 +711,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 68
-    },
+    "colab": {},
     "colab_type": "code",
-    "id": "_Mijdiua5ag8",
-    "outputId": "4f04cc5f-cd34-4f58-b546-3bdbacea1864"
+    "id": "_Mijdiua5ag8"
    },
    "outputs": [],
    "source": [
@@ -807,13 +814,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 617
-    },
+    "colab": {},
     "colab_type": "code",
-    "id": "f2TMPMM4u_5I",
-    "outputId": "415ffe80-e782-471f-8748-cd8e86abb255"
+    "id": "f2TMPMM4u_5I"
    },
    "outputs": [],
    "source": [
@@ -879,13 +882,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
+    "colab": {},
     "colab_type": "code",
-    "id": "lFhJqqSS-i9d",
-    "outputId": "7027ec15-317d-4248-f78a-4ab2bab3c7fe"
+    "id": "lFhJqqSS-i9d"
    },
    "outputs": [],
    "source": [
@@ -896,13 +895,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
+    "colab": {},
     "colab_type": "code",
-    "id": "dxXoa0FW5ahH",
-    "outputId": "352f9b4d-fa7d-4b1b-df63-97e88c46e09a"
+    "id": "dxXoa0FW5ahH"
    },
    "outputs": [],
    "source": [
@@ -915,13 +910,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 68
-    },
+    "colab": {},
     "colab_type": "code",
-    "id": "_DivQmKEDcit",
-    "outputId": "567a19e7-872b-4185-953b-70aa6a8ef711"
+    "id": "_DivQmKEDcit"
    },
    "outputs": [],
    "source": [
@@ -943,7 +934,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "colab_type": "text",
+    "id": "NdNjHBIgSLaW"
+   },
    "source": [
     "Let's look at some scenarios. We'll see that one unit's change in an independent variable results in a coefficient worth of change in the dependent variable."
    ]
@@ -962,13 +956,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
+    "colab": {},
     "colab_type": "code",
-    "id": "Rup9q-6gAIZD",
-    "outputId": "d8a2fb58-f506-4a39-e1ec-6db15a5378d1"
+    "id": "Rup9q-6gAIZD"
    },
    "outputs": [],
    "source": [
@@ -989,13 +979,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
+    "colab": {},
     "colab_type": "code",
-    "id": "1onFls9AAh5Z",
-    "outputId": "42860ad3-def1-451c-df8c-299b99eff6cb"
+    "id": "1onFls9AAh5Z"
    },
    "outputs": [],
    "source": [
@@ -1016,13 +1002,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
+    "colab": {},
     "colab_type": "code",
-    "id": "el1gAUyGApnV",
-    "outputId": "e3bf33d5-50bc-400a-be1f-03221fed3e7e"
+    "id": "el1gAUyGApnV"
    },
    "outputs": [],
    "source": [
@@ -1043,13 +1025,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
+    "colab": {},
     "colab_type": "code",
-    "id": "stfnvUc_A3pM",
-    "outputId": "f003d2b7-fadc-4e52-bc37-c07e6526b7b4"
+    "id": "stfnvUc_A3pM"
    },
    "outputs": [],
    "source": [
@@ -1070,13 +1048,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
+    "colab": {},
     "colab_type": "code",
-    "id": "Zywdu1SJA_hP",
-    "outputId": "b08b405f-cb81-43fb-a2d0-7b677a4a9c4e"
+    "id": "Zywdu1SJA_hP"
    },
    "outputs": [],
    "source": [
@@ -1097,13 +1071,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
+    "colab": {},
     "colab_type": "code",
-    "id": "YTFqg0ixBcIH",
-    "outputId": "7cd9f078-1a92-4a53-bc5a-65c40dca22e6"
+    "id": "YTFqg0ixBcIH"
    },
    "outputs": [],
    "source": [
@@ -1124,13 +1094,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
+    "colab": {},
     "colab_type": "code",
-    "id": "VHtDzQT-Bxel",
-    "outputId": "c2935dd8-9d46-4ad0-bded-85ad36850f93"
+    "id": "VHtDzQT-Bxel"
    },
    "outputs": [],
    "source": [
@@ -1151,13 +1117,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
+    "colab": {},
     "colab_type": "code",
-    "id": "2ge-czWaCAWQ",
-    "outputId": "c3075294-b3ce-4c5e-fb58-a8f6005874c5"
+    "id": "2ge-czWaCAWQ"
    },
    "outputs": [],
    "source": [
@@ -1178,13 +1140,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
+    "colab": {},
     "colab_type": "code",
-    "id": "ZDWbZ1duCJLS",
-    "outputId": "0c27d10e-1375-44ea-ba03-b258a37eb3eb"
+    "id": "ZDWbZ1duCJLS"
    },
    "outputs": [],
    "source": [
@@ -1205,13 +1163,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
+    "colab": {},
     "colab_type": "code",
-    "id": "MP6UnCT1CXoD",
-    "outputId": "ce4b83d8-b96b-42a6-c323-c03f71042b13"
+    "id": "MP6UnCT1CXoD"
    },
    "outputs": [],
    "source": [
@@ -1232,13 +1186,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
+    "colab": {},
     "colab_type": "code",
-    "id": "OpiDm-QjCZqi",
-    "outputId": "75a6d096-3c6d-43bb-f09b-2de50404c83b"
+    "id": "OpiDm-QjCZqi"
    },
    "outputs": [],
    "source": [
@@ -1410,13 +1360,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 514
-    },
+    "colab": {},
     "colab_type": "code",
-    "id": "8bsq0zoE5ahq",
-    "outputId": "606d87fa-00fe-4fea-f4b1-f8b83b43d8c0"
+    "id": "8bsq0zoE5ahq"
    },
    "outputs": [],
    "source": [
@@ -1460,13 +1406,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 514
-    },
+    "colab": {},
     "colab_type": "code",
-    "id": "TkyDSs8f6stD",
-    "outputId": "d8d0a2b4-ea77-4ce1-fc7c-3b5b553b68f7"
+    "id": "TkyDSs8f6stD"
    },
    "outputs": [],
    "source": [
@@ -1554,13 +1496,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 595
-    },
+    "colab": {},
     "colab_type": "code",
-    "id": "ouidNhDprzoI",
-    "outputId": "09a86a8f-f3a0-4c3d-f115-0681816c6d22"
+    "id": "ouidNhDprzoI"
    },
    "outputs": [],
    "source": [
@@ -1594,13 +1532,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
+    "colab": {},
     "colab_type": "code",
-    "id": "jDTgv1lKrzoK",
-    "outputId": "0cd9b1eb-5ed9-443a-c09c-ae89926babbc"
+    "id": "jDTgv1lKrzoK"
    },
    "outputs": [],
    "source": [
@@ -1777,13 +1711,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 1000
-    },
+    "colab": {},
     "colab_type": "code",
-    "id": "YShWjZrIrzoP",
-    "outputId": "3a7101a1-3f88-4651-dafb-07a79ebb1203"
+    "id": "YShWjZrIrzoP"
    },
    "outputs": [],
    "source": [
@@ -1903,6 +1833,10 @@
   }
  ],
  "metadata": {
+  "colab": {
+   "name": "Unit 2 - Sprint 1 - Module 2 - LESSON.ipynb",
+   "provenance": []
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
