--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -2286,27 +2286,49 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EWPfUYUunf8J",
+        "id": "VQs4PMTpqDCu",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 104
+          "height": 505
         },
-        "outputId": "bd05eb0a-0778-4830-98af-d27844d47b95"
+        "outputId": "4b7b84f1-4787-4a98-e189-9a6d6a7f6f1e"
       },
       "source": [
-        "!pip install zipcodes"
+        "!pip install uszipcode"
       ],
-      "execution_count": 142,
+      "execution_count": 145,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Collecting zipcodes\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/3a/9e/899d449f76e5f303c7fe2c9b6142ef0121b5ec1f1279a7f27b2bbb90025c/zipcodes-1.1.0-py2.py3-none-any.whl (715kB)\n",
-            "\r\u001b[K     |▌                               | 10kB 18.0MB/s eta 0:00:01\r\u001b[K     |█                               | 20kB 3.1MB/s eta 0:00:01\r\u001b[K     |█▍                              | 30kB 4.2MB/s eta 0:00:01\r\u001b[K     |█▉                              | 40kB 2.9MB/s eta 0:00:01\r\u001b[K     |██▎                             | 51kB 3.3MB/s eta 0:00:01\r\u001b[K     |██▊                             | 61kB 3.9MB/s eta 0:00:01\r\u001b[K     |███▏                            | 71kB 4.1MB/s eta 0:00:01\r\u001b[K     |███▋                            | 81kB 4.5MB/s eta 0:00:01\r\u001b[K     |████▏                           | 92kB 5.0MB/s eta 0:00:01\r\u001b[K     |████▋                           | 102kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████                           | 112kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████▌                          | 122kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████                          | 133kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████▍                         | 143kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████▉                         | 153kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████▎                        | 163kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████▉                        | 174kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████▎                       | 184kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████▊                       | 194kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████▏                      | 204kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████▋                      | 215kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████                      | 225kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████▌                     | 235kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████                     | 245kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████▌                    | 256kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████                    | 266kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████▍                   | 276kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████▉                   | 286kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████████▎                  | 296kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████████▊                  | 307kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████████▏                 | 317kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████████▋                 | 327kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████████▏                | 337kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████████▋                | 348kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████████                | 358kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████████▌               | 368kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████████████               | 378kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████████████▍              | 389kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████████████▉              | 399kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████████████▎             | 409kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████████████▉             | 419kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████████████▎            | 430kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████████████▊            | 440kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████████████▏           | 450kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████████████▋           | 460kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████████████████           | 471kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████████████████▌          | 481kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████          | 491kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████▌         | 501kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████         | 512kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████▍        | 522kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████▉        | 532kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████▎       | 542kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████▊       | 552kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▏      | 563kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▋      | 573kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▏     | 583kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▋     | 593kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████████     | 604kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▌    | 614kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████████    | 624kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▍   | 634kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▉   | 645kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▎  | 655kB 4.8MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▊  | 665kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▎ | 675kB 4.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▊ | 686kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▏| 696kB 4.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▋| 706kB 4.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 716kB 4.8MB/s \n",
-            "\u001b[?25hInstalling collected packages: zipcodes\n",
-            "Successfully installed zipcodes-1.1.0\n"
+            "Collecting uszipcode\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/bc/94/1b908c6fe2008f0e913b0b2d97951aa76e00ec1044883c012afb2e477b4a/uszipcode-0.2.4-py2.py3-none-any.whl (378kB)\n",
+            "\u001b[K     |████████████████████████████████| 378kB 4.7MB/s \n",
+            "\u001b[?25hRequirement already satisfied: attrs in /usr/local/lib/python3.6/dist-packages (from uszipcode) (19.3.0)\n",
+            "Collecting pathlib-mate\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/ff/f2/a1e6044fe90784e7bbc05286f2e8616aa2ff167f7275f5a6f2df479092c0/pathlib_mate-0.0.15-py2.py3-none-any.whl (195kB)\n",
+            "\u001b[K     |████████████████████████████████| 204kB 20.5MB/s \n",
+            "\u001b[?25hRequirement already satisfied: sqlalchemy in /usr/local/lib/python3.6/dist-packages (from uszipcode) (1.3.13)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from uszipcode) (2.21.0)\n",
+            "Collecting autopep8\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/12/55/7b07585ca0c30e5b216e4d627f82f96f1a7e82d2dd727b1f926cb3f3d58b/autopep8-1.5.tar.gz (116kB)\n",
+            "\u001b[K     |████████████████████████████████| 122kB 20.1MB/s \n",
+            "\u001b[?25hRequirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from pathlib-mate->uszipcode) (1.12.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests->uszipcode) (2019.11.28)\n",
+            "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->uszipcode) (3.0.4)\n",
+            "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests->uszipcode) (1.24.3)\n",
+            "Requirement already satisfied: idna<2.9,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests->uszipcode) (2.8)\n",
+            "Collecting pycodestyle>=2.5.0\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/0e/0c/04a353e104d2f324f8ee5f4b32012618c1c86dd79e52a433b64fceed511b/pycodestyle-2.5.0-py2.py3-none-any.whl (51kB)\n",
+            "\u001b[K     |████████████████████████████████| 51kB 7.5MB/s \n",
+            "\u001b[?25hBuilding wheels for collected packages: autopep8\n",
+            "  Building wheel for autopep8 (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for autopep8: filename=autopep8-1.5-py2.py3-none-any.whl size=43266 sha256=5d4266df5196b642192c8b08b85863d7845746125c25992ee4c508489f253249\n",
+            "  Stored in directory: /root/.cache/pip/wheels/2b/dc/d5/e4bc37df332b7a88022bc79d6cdccb79068fdc1620d86afc3a\n",
+            "Successfully built autopep8\n",
+            "Installing collected packages: pycodestyle, autopep8, pathlib-mate, uszipcode\n",
+            "Successfully installed autopep8-1.5 pathlib-mate-0.0.15 pycodestyle-2.5.0 uszipcode-0.2.4\n"
           ],
           "name": "stdout"
         }
@@ -2315,12 +2337,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sP7Ew2dOnleW",
+        "id": "6p-_Sk5QrYoy",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "import zipcodes"
+        "from uszipcode import Zipcode\n",
+        "from uszipcode import SearchEngine"
       ],
       "execution_count": 0,
       "outputs": []
@@ -2328,12 +2351,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cPAkOsdMp4jG",
+        "id": "El24Drperh8W",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "\n",
+        "search = SearchEngine(simple_zipcode=True)\n",
+        "zipcode,  = search.by_coordinates(lat = 40.7388, lng = -74.0018, radius=1, returns=1 )\n",
+        "zipcode = zipcode.to_dict()\n",
+        "zipcode = int(zipcode.get('zipcode'))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -2341,7 +2368,180 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VQs4PMTpqDCu",
+        "id": "0xr2oyCWr5bn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e126765e-066d-4bbc-e9c9-d5f03b54fcac"
+      },
+      "source": [
+        "zipcode"
+      ],
+      "execution_count": 192,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10011"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 192
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2uv9_dRBvJAi",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "search = SearchEngine(simple_zipcode=True)\n",
+        "\n",
+        "def get_zip_code(latitude, longitude):\n",
+        "  zipcode,  = search.by_coordinates(lat = latitude, lng = longitude, radius=1, returns=1 )\n",
+        "  zipcode = zipcode.to_dict()\n",
+        "  zipcode = int(zipcode.get('zipcode'))\n",
+        "  return zipcode"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OIjyrz5x2VbN",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "7f396a1f-f902-45b6-d3fd-73d2cef189ab"
+      },
+      "source": [
+        "get_zip_code(40.7429, -73.9648)"
+      ],
+      "execution_count": 236,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10016"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 236
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "S1f-sugfykbi",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 321
+        },
+        "outputId": "813ca38e-ea6d-41ab-f8c4-aa7f793a3712"
+      },
+      "source": [
+        "\n",
+        "for index, row in df.iterrows():\n",
+        "  lat = row['latitude']\n",
+        "  long = row['longitude']\n",
+        "  get_zip_code(lat, long)\n"
+      ],
+      "execution_count": 237,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-237-4ed41c70a912>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m   \u001b[0mlat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'latitude'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0mlong\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'longitude'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m   \u001b[0mget_zip_code\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlong\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-235-082cd9a88daf>\u001b[0m in \u001b[0;36mget_zip_code\u001b[0;34m(latitude, longitude)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mget_zip_code\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlatitude\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlongitude\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m   \u001b[0mzipcode\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0;34m=\u001b[0m \u001b[0msearch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mby_coordinates\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlatitude\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlng\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlongitude\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mradius\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreturns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m   \u001b[0mzipcode\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mzipcode\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m   \u001b[0mzipcode\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzipcode\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'zipcode'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: not enough values to unpack (expected 1, got 0)"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "g-NN9QHB0-pc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "02757b75-b983-4a07-93ab-8273a315887f"
+      },
+      "source": [
+        "len(empty_list)"
+      ],
+      "execution_count": 223,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "48817"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 223
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OPM5vTdr6p4y",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "2689c4cc-a908-4c5c-8d3e-cc17d686189f"
+      },
+      "source": [
+        "df.shape"
+      ],
+      "execution_count": 224,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(48817, 37)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 224
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hVSz3eF36uua",
         "colab_type": "code",
         "colab": {}
       },
