Complete w/o stretch goals

--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -318,12 +318,137 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import scikit-learn LR\n",
+    "\n",
+    "from sklearn.linear_model import LinearRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# instantiate the class\n",
+    "\n",
+    "model = LinearRegression()\n",
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create features, target, and train data\n",
+    "\n",
+    "features = ['bedrooms']\n",
+    "target = 'price'\n",
+    "X_train = df[features]\n",
+    "y_train = df[target]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# fit the model\n",
+    "\n",
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4827.73665176])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# apply the model to new data \n",
+    "\n",
+    "bedrooms = 3\n",
+    "X_test = [[bedrooms]]\n",
+    "y_pred = model.predict(X_test)\n",
+    "y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$4,828 estimated rent for 3 bedroom condo in Tribeca.\n",
+      "In this linear regression, each additional bedroom adds $853.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# defeniton to use model to predict the price of rent per bedroom in Tribeca\n",
+    "\n",
+    "def predict(bedrooms):\n",
+    "    y_pred = model.predict([[bedrooms]])\n",
+    "    estimate = y_pred[0]\n",
+    "    coefficient = model.coef_[0]\n",
+    "    result = f'${estimate:,.0f} estimated rent for {bedrooms:,.0f} bedroom condo in Tribeca.'\n",
+    "    explanation = f'In this linear regression, each additional bedroom adds ${coefficient:,.0f}.'\n",
+    "    return result + '\\n' + explanation\n",
+    "\n",
+    "print(predict(3))"
+   ]
   },
   {
    "cell_type": "code",
