made random changes

--- a/module1-regression-1/LS_DS_211.ipynb
+++ b/module1-regression-1/LS_DS_211.ipynb
@@ -598,7 +598,7 @@
     "id": "lFYuvV19Wul6"
    },
    "source": [
-    "## Follow Along\n",
+    "## Follow Along Seans Notes\n",
     "\n",
     "Follow the 5 step process, and refer to [Scikit-Learn LinearRegression documentation](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html)."
    ]
