--- a/Sweta_Sengupta_DS_211_assignment.ipynb
+++ b/Sweta_Sengupta_DS_211_assignment.ipynb
@@ -573,7 +573,7 @@
         "colab": {}
       },
       "source": [
-        "#Could sale price be dependent on square feet? To explore this relationship, let's make a scatterplot, using Plotly Express:"
+        "#Could sale price be dependent on latitude? To explore this relationship, let's make a scatterplot, using Plotly Express:"
       ],
       "execution_count": 0,
       "outputs": []
